pitch topo